- escrita no banco funcional

--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -16,6 +16,9 @@
     <input type="file" required accept=".txt" name="cnab" id="cnab"/>
     <p>
     <input type="submit" value="Enviar"/>
+    <p>
+    <span>Mensagem: {{ msg }}</span>
+
 </form>
 
 <p><p>
