--- a/project/static/css/desafio.css
+++ b/project/static/css/desafio.css
@@ -6,22 +6,22 @@
   width: 100%;
 }
 
-#transactions {
+.transactions {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-#transactions td, #transactions th {
+.transactions td, .transactions th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#transactions tr:nth-child(even){background-color: #f2f2f2;}
+.transactions tr:nth-child(even){background-color: #f2f2f2;}
 
-#transactions tr:hover {background-color: #ddd;}
+.transactions tr:hover {background-color: #ddd;}
 
-#transactions th {
+.transactions th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
